Fixed text wrappingon Name Title

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html {
     height:100%;
     width:100%;
-    font-family: Trebuchet MS;
+    font-family: Arial, Helvetica, sans-serif;;
 }
 
 body
@@ -9,7 +9,6 @@ body
     margin: 0;
     padding: 0;
     color: #313639;
-    font-family: Trebuchet MS;
     height: 100%;
     width:100%;
  }
@@ -24,6 +23,7 @@ h1{
     font-size: 35px;
     letter-spacing: 0.08em;
     margin-bottom:0;
+    white-space: nowrap;   
 }
 
 #h1-margin-override {
